--- a/PROJET BAC 2020/test JQuery/Exemple QCM Jquery/index.html
+++ b/PROJET BAC 2020/test JQuery/Exemple QCM Jquery/index.html
@@ -51,7 +51,7 @@
     <! Passage en jQuery qui se programme comme le javascript en certains point>
     <script src="Data/jquery-3.4.1.min.js"></script>
     <script>
-        // passage au langage JS
+        // passage au langage JS jquery avec le symbole $
         $(function() {
             // Dissimulation des réponses
             $('.reponse').hide();
